--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>frist repository</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>my repository</h1>
-    <a target="_blank" href="https://www.google.com/">visit google</a>
+    <a id="google" target="_blank" href="https://www.google.com/">visit google</a>
+<h2>Lorem blog</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa necessitatibus quia doloremque, sequi numquam beatae ad suscipit assumenda minus nisi nemo nulla, odit sit quos praesentium, tenetur unde debitis eaque.</p>
 </body>
 </html>
